--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.username=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis-plus.configuration.map-underscore-to-camel-case=true
+
+qzw.qq.number=1773979533
+qzw.qq.password="quziwei123"
