--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,6 +7,15 @@ spring.datasource.username=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 mybatis-plus.configuration.map-underscore-to-camel-case=true
+#redis配置
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
+spring.redis.database=0
+spring.redis.jedis.pool.max-active=20
+spring.redis.jedis.pool.max-wait=-1
+spring.redis.timeout=1000
+spring.redis.password=
+
 
 qzw.qq.number=1773979533
 qzw.qq.password="quziwei123"
