--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 server.port=8080
 #配置数据库
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
-spring.datasource.url=jdbc:mysql://localhost:3306/robot?serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://localhost:3306/robot?serverTimezone=Asia/Shanghai
 spring.datasource.password=quziwei123
 spring.datasource.username=root
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -16,6 +16,6 @@ spring.redis.jedis.pool.max-wait=-1
 spring.redis.timeout=1000
 spring.redis.password=
 
-
+spring.main.allow-bean-definition-overriding=true
 qzw.qq.number=1773979533
 qzw.qq.password="quziwei123"
